app-of-apps/apps/kube-prometheus-stack/networks/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus-grafana
  namespace: monitoring-system
spec:
  host: prometheus-grafana
  subsets:
    - name: stable
