app-of-apps/apps/kube-prometheus-stack/networks/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-grafana
  namespace: monitoring-system
spec:
  gateways:
    - istio-system/default
  hosts:
    - grafana.kingbj0429.com
  http:
    - route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
            subset: stable
          weight: 100
